--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,6 +100,20 @@ header nav a:hover {
   height: 500px;
 }
 
+.text-shadow {
+  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7);
+}
+.carousel-caption {
+  top: 50%;
+  transform: translateY(-50%);
+  bottom: initial;
+}
+.carousel-caption h2 {
+  font-weight: 700;
+  font-size: 2rem;
+}
+
+
 @media (max-width: 900px) {
   .carousel-inner img {
     height: 350px;
