--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,7 +218,7 @@ h2 {
 
 /* Footer */
 footer {
-  background-color: #236a91;
+  background-color: #83b6d2;
   text-align: center;
   padding: 20px 0;
   color: white;
